--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 hello world
