fixed css/js files

--- a/project/index.html
+++ b/project/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="tr" charset="UTF-8">
 <head>
-    <link href="file:///C:\Users\alperen\Documents\vscode\website\style.css" rel="stylesheet" type="text/css"/>
-    <script type="application/javascript" src="file:///C:\Users\alperen\Documents\vscode\website\script.js"></script>
+    <link href="./style.css" rel="stylesheet" type="text/css"/>
+    <script type="application/javascript" src="./script.js"></script>
     <title>deneme</title>
 </head>
 
