--- a/projects/index.html
+++ b/projects/index.html
@@ -1,4 +1,4 @@
 <html>
-    <link href=".../first_page" rel="stylesheet" >First Page<link/>
-    <link href=".../navbar_hover" rel="stylesheet">Navbar Hover<link/>
+    <link href=".../projects/first_page" rel="stylesheet" >First Page<link/>
+    <link href=".../projects/navbar_hover" rel="stylesheet">Navbar Hover<link/>
 </html>
