--- a/projects/index.html
+++ b/projects/index.html
@@ -1,5 +1,6 @@
 <html>
-    <link href=".../projects/first_page" rel="stylesheet" >First Page<link/>
+    <a href=".../projects/first_page" rel="stylesheet" >First Page<a/>
     <br>
-    <link href=".../projects/navbar_hover" rel="stylesheet">Navbar Hover<link/>
+    <a href=".../projects/navbar_hover" rel="stylesheet">Navbar Hover<a/>
+    
 </html>
