fix for the problem I created myself

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 <html>
-    <a href=".../projects/first_page" rel="stylesheet" >First Page<a/>
+    <a href="/projects/first_page" rel="stylesheet" >First Page<a/>
     <br>
-    <a href=".../projects/navbar_hover" rel="stylesheet">Navbar Hover<a/>
+    <a href="/projects/navbar_hover" rel="stylesheet">Navbar Hover<a/>
     
 </html>
