progress bar added to index.html

--- a/projects/index.html
+++ b/projects/index.html
@@ -2,5 +2,6 @@
     <a href="/projects/first_page" rel="stylesheet" >First Page<a/>
     <br>
     <a href="/projects/navbar_hover" rel="stylesheet">Navbar Hover<a/>
-    
+    <br>
+    <a href="/projects/progress_bar" rel="stylesheet">Progress Bar<a/>
 </html>
